--- a/DirRX.HelpDesk/DirRX.HelpDesk.Shared/ExternalRequest/ExternalRequestSystem.resx
+++ b/DirRX.HelpDesk/DirRX.HelpDesk.Shared/ExternalRequest/ExternalRequestSystem.resx
@@ -117,22 +117,46 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Property_Name" xml:space="preserve">
-    <value>Name</value>
+  <data name="DisplayName" xml:space="preserve">
+    <value>Внешнее обращение</value>
   </data>
-  <data name="Property_Number" xml:space="preserve">
-    <value>Номер</value>
+  <data name="AccusativeDisplayName" xml:space="preserve">
+    <value>Внешнее обращение</value>
   </data>
-  <data name="Property_Description" xml:space="preserve">
-    <value>Описание</value>
+  <data name="CollectionDisplayName" xml:space="preserve">
+    <value>Внешние обращения</value>
   </data>
-  <data name="Property_CreatedDate" xml:space="preserve">
-    <value>Дата создания</value>
+  <data name="Property_Author" xml:space="preserve">
+    <value>Автор</value>
   </data>
-  <data name="Property_Responsible" xml:space="preserve">
-    <value>Ответственный</value>
+  <data name="Property_Result" xml:space="preserve">
+    <value>Результат</value>
   </data>
-  <data name="Property_Index" xml:space="preserve">
-    <value>Индекс</value>
+  <data name="ControlGroup_5d0ff08008b74f559b2bbab08a2691b9" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Resource_0ed0bf96942b42c3b2aabe355b131fea" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Control_0ed0bf96942b42c3b2aabe355b131fea_EmptyText" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Resource_0215f88c9a624a8cbfa300ab4d2ccbf5" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Resource_34f4b0892a0b4f258897a24a30513fc6" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Control_34f4b0892a0b4f258897a24a30513fc6_EmptyText" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Resource_dcc1b5c00821446b9ca5667f6f107bea" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Resource_1572c96e08cb4a8798388244416c281b" xml:space="preserve">
+    <value />
+  </data>
+  <data name="Control_1572c96e08cb4a8798388244416c281b_EmptyText" xml:space="preserve">
+    <value />
   </data>
 </root>
